--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,7 @@ android {
 
 dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'androidx.core:core-ktx:+'
     def nav_version = "2.7.5"
 
     implementation 'androidx.core:core-ktx:1.8.0'
